@@ -3,6 +3,9 @@ Version 1.6.7
 *******************************************************************************
 
 2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	* The scope of the macro NUM_HANDLE is now restricted to upnpapi.c.
+
+2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	* InitHandleList() has never been implemented, I guess no one has ever
 	called it, so remove it.
 	* GetFreeHandle() and FreeHandle() are now static as they should.
